# ros2-tf-real-robot-project

./: features.yaml
install/: local_setup.sh  setup.sh
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh  package.xml
install/ros2_tf_project/lib/ros2_tf_project/: feature_detector  simple_navigation_action_server  simple_trajectory_service
install/ros2_tf_project/share/ros2_tf_project/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tb3_burger_cartographer/share/tb3_burger_cartographer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tb3_burger_localization/share/tb3_burger_localization/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3/share/turtlebot3/: package.sh
install/turtlebot3_bringup/share/turtlebot3_bringup/: package.sh
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.sh  package.sh
install/turtlebot3_description/share/turtlebot3_description/: package.sh
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.sh  package.sh
log/: latest_build
notebook_ws/: default.ipynb
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt
ros2_ws/src/ros2_tf_project/: CMakeLists.txt
ros2_ws/src/ros2_tf_project/frames/: static_frames_sim.yaml
ros2_ws/src/ros2_tf_project/launch/: feature_detection_service_server.launch.py
ros2_ws/src/ros2_tf_project/rviz/: tb3_burger.rviz.rviz
ros2_ws/src/ros2_tf_project/src/: feature_detector.cpp  simple_navigation_action_server.cpp  simple_trajectory_service.cpp
ros2_ws/src/tb3_burger_cartographer/: CMakeLists.txt
ros2_ws/src/tb3_burger_localization/: CMakeLists.txt
simulation_ws/log/: latest_build
(+60 files in other folders)
